--- a/onlineshop/src/main/resources/css/corrections.css
+++ b/onlineshop/src/main/resources/css/corrections.css
@@ -16,6 +16,16 @@ body {
     font-weight: bold;
 }
 
+[class*="col-"] {
+    background-color: inherit;
+    border: none;
+}
+
+.shopping-cart [class*="col-"] {
+    background-color: rgba(86, 61, 124, .15);
+    border: 1px solid rgba(86, 61, 124, .2);
+}
+
 #navbarHeader .row div {
     background: #343a40!important;
 }
